--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,10 @@ body {
   margin: 0;
 }
 
-.main {
+.intro {
   background: url(../img/yana-bg.jpg) no-repeat center;
   background-size: cover;
+  height: 100vh;
 }
 
 .intro_title {
@@ -17,7 +18,6 @@ body {
   font-size: 50px;
   line-height: 60px;
   color: white;
-  margin: 100px 0;
   font-family: "Kaushan Script", cursive, sans-serif;
 }
 
@@ -30,6 +30,14 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.services {
+  margin-top: 250px;
+}
+
+.container_services {
+  margin-bottom: 50px;
+}
+
 /* Services  */
 
 .services_title {
@@ -39,6 +47,8 @@ body {
 }
 
 .services_icon {
+  margin-right: 10px;
+  border-radius: 50%;
   max-width: 40px;
   max-height: 40px;
 }
@@ -267,4 +277,17 @@ body {
 
 .copyright span {
   color: #f38181;
+}
+
+.header_logo {
+  max-width: 40px;
+  max-height: 40px;
+  border-radius: 50%;
+}
+
+/* Bootstrap */
+
+.container-fluid {
+  display: flex !important;
+  justify-content: space-between i !important;
 }
